# asar-focus

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  RELEASE.md  VERSION  asar_constants.cpp  asar_lvl0_parser.cpp  asar_lvl0_parser.h  asar_lvl1_file.cpp  asar_lvl1_file.h  asar_metadata.cpp  asar_metadata.h  bswap_util.h  checks.h  cuda_cleanup.h  cuda_util.h  cuda_workplace.h  cufft_plan.cpp  cufft_plan.h  device_padded_image.cu  device_padded_image.cuh  envisat_dsd.cpp  envisat_dsd.h  envisat_file_format.h  envisat_ins_file.cpp  envisat_ins_file.h  envisat_lvl1_dsd.h  envisat_mph.h  envisat_ph.cpp  envisat_ph.h  envisat_sph.h  envisat_types.h  envisat_utils.h  ers_im_lvl1_file.cpp  ers_im_lvl1_file.h  fractional_doppler_centroid.cu  fractional_doppler_centroid.cuh  geo_tools.cpp  geo_tools.h  (+21 more)
.github/workflows/: ci.yml  e2e.yml  pages-deploy.yml  release_package.yml
app/: CMakeLists.txt
app/include/: alus_log.h  args.h  status_assembly.h
app/src/: alus_log.cc  args.cc
app/unit-test/: CMakeLists.txt  args_test.cc
build-automation/: build_in_containers.sh  compile_build.sh  compile_build_container.sh  create_exe_in_container.sh  create_release_from_builds.sh  run_e2e_container.sh
cuda_util/: CMakeLists.txt  cuda_algorithm.cu  cuda_algorithm.cuh  cuda_algorithm.h  cuda_bit.cuh  cuda_cleanup.h  cuda_device.cu  cuda_device.h  cuda_device_init.cu  cuda_device_init.h  cuda_stdio.cu  cuda_stdio.cuh  cuda_stdio.h  cuda_util.h  cuda_workplace.h  cufft_checks.h  cufft_plan.cc  cufft_plan.cpp  cufft_plan.h  device_padded_image.cu  device_padded_image.cuh  memory_policy.cc  memory_policy.h
dependencies/: FetchContents.cmake
doc/add/: add_esa.md
doc/sum/: sum.md  sum_esa.md
docs/: .gitmodules  404.html  _config.yml  feed.xml  redirects.json  robots.txt  sitemap.xml  sw.js
docs/_posts/: 2011-12-31-new-years-eve-is-awesome.md  2022-10-03-tere.md  2023-12-06-read-and-write-optimizations.md  2023-12-21-range-and-azimuth-window.md  2024-01-08-version-0-2-shortcomings.md  2024-01-08-version-0-3-shortcomings.md  parse_and_write_optimizations.md
docs/_tabs/: about.md
docs/about/: index.html
docs/archives/: index.html
docs/assets/css/: jekyll-theme-chirpy.css.map
docs/assets/img/favicons/: site.webmanifest
docs/assets/js/data/: swcache.js
docs/categories/: index.html
docs/posts/: index.html
docs/tags/: index.html
envisat_format/: CMakeLists.txt  asar_aux.cc  asar_aux.h  asar_constants.cpp  asar_constants.h  asar_lvl0_parser.cpp  asar_lvl0_parser.h  asar_lvl1_file.cpp  asar_lvl1_file.h  bswap_util.h  doris_orbit.cc  doris_orbit.h  envisat_aux_file.cpp  envisat_aux_file.h  envisat_file_format.h  envisat_ins_file.cpp  envisat_ins_file.h  envisat_lvl0_parser.cpp  envisat_lvl0_parser.h  envisat_lvl1_ads.h  envisat_lvl1_dsd.h  envisat_lvl1_mph.h  envisat_lvl1_sph.h  envisat_lvl1_writer.cpp  envisat_lvl1_writer.h  envisat_mph.h  envisat_mph_sph_parser.h  envisat_mph_sph_str_utils.h  envisat_ph.h  envisat_sph.h  envisat_types.h  envisat_utils.h  ers_aux_file.cc  ers_aux_file.h
envisat_format/include/: asar_aux.h  asar_constants.h  bswap_util.h  doris_orbit.h  envisat_aux_file.h  envisat_aux_xca.h  envisat_format_kernels.h  envisat_im_parse.h  envisat_lvl0_parser.h  envisat_lvl1_ads.h  envisat_lvl1_mph.h  envisat_lvl1_sph.h  envisat_lvl1_writer.h  envisat_mph_sph_parser.h  envisat_mph_sph_str_utils.h  envisat_parse_util.cuh  envisat_parse_util.h  envisat_types.h  envisat_utils.h  ers_aux_file.h  ers_env_format.h  ers_im_parse.h  ers_sbt.h  ers_tim.h  parse_util.h  patc.h
envisat_format/src/: asar_aux.cc  asar_constants.cc  doris_orbit.cc  envisat_aux_file.cc  envisat_format_kernels.cu  envisat_im_parse.cc  envisat_lvl0_parser.cc  envisat_lvl1_writer.cc  envisat_parse_util.cu  ers_aux_file.cc  ers_im_parse.cc  ers_sbt.cc  ers_tim.cc  patc.cc
envisat_format/unit-test/: CMakeLists.txt  asar_constants_test.cc  envisat_parse_util_test.cc  envisat_types_test.cc  envisat_utils_test.cc  ers_sbt_test.cc  parse_util_test.cc
experiments/: CMakeLists.txt  host_memory_allocation.cc
sar/: az_multilook.cu  az_multilook.cuh  focussing_details.h  fractional_doppler_centroid.cu  fractional_doppler_centroid.cuh  iq_correction.cu  iq_correction.cuh  orbit_state_vector.cc  orbit_state_vector.cpp  orbit_state_vector.h  processing_velocity_estimation.cc  processing_velocity_estimation.cpp  processing_velocity_estimation.h  range_compression.cu  range_compression.cuh  range_doppler_algorithm.cu  range_doppler_algorithm.cuh  range_spreading_loss.cu  range_spreading_loss.cuh  sar_chirp.cc  sar_chirp.cpp  sar_chirp.h  sar_metadata.h  srgr.cu  srgr.cuh  terrain_correction.cu  terrain_correction.cuh
util/: CMakeLists.txt  checks.h  date_time_util.cc  date_time_util.h  filesystem_util.cc  filesystem_util.h  geo_tools.cpp  geo_tools.h  img_output.cpp  img_output.h  math_utils.cpp  math_utils.h  plot.cpp
util/include/: checks.h  date_time_util.h  file_async.h  filesystem_util.h  geo_tools.h  globe_plot.h  img_output.h  math_utils.h  mem_alloc.h  plot.h
util/src/: date_time_util.cc  file_async.cc  filesystem_util.cc  geo_tools.cc  globe_plot.cc  img_output.cc  math_utils.cc  plot.cc
util/unit-test/: CMakeLists.txt  date_time_util_test.cc
